# 2d_open_world_game

./: CMakeLists.txt  Character.cpp  Character.hpp  Dialogue.cpp  Dialogue.hpp  Makefile  README.md  ResourceManager.cpp  ResourceManager.hpp  Speaker.cpp  Speaker.hpp  TestTools.cpp  main.cpp  tests.cpp
headers/: Dialogue.hpp  Speaker.hpp
include/: Attacker.hpp  Character.hpp  Dialogue.hpp  DialogueLoader.hpp  DialogueManager.hpp  Inventory.hpp  Item.hpp  ItemFactory.hpp  Living.hpp  Logger.hpp  NPC.hpp  NotExistingItem.hpp  NotExistingItemFactory.hpp  Path.hpp  Player.hpp  RandomNumberGenerator.hpp  ResourceManager.hpp  Scene.hpp  Speaker.hpp  ToolItem.hpp  ToolItemFactory.hpp  UseableItem.hpp  UseableItemFactory.hpp
include/components/: Component.hpp  Inventory.hpp
lib/: TestTools.cpp
resources/dialogues/: farmer.txt  farmer1.txt  king_nose.txt  pig.txt
src/: Attacker.cpp  Character.cpp  Dialogue.cpp  DialogueManager.cpp  Inventory.cpp  Item.cpp  Living.cpp  Logger.cpp  NPC.cpp  NotExistingItem.cpp  NotExistingItemFactory.cpp  Path.cpp  Player.cpp  RandomNumberGenerator.cpp  ResourceManager.cpp  Scene.cpp  Speaker.cpp  ToolItem.cpp  ToolItemFactory.cpp  UseableItem.cpp  UseableItemFactory.cpp
src/components/: Inventory.cpp
tests/: LoggerTest.cpp  ResourceManagerTest.cpp  SpeakerTest.cpp  _TestTools.cpp  tests.cpp
